design: Add account page, delete test code and add logo images
account 관련 페이지 및 컨트롤러 추가
불필요한 Controller 및 Page 삭제
kakao, naver logo 추가

--- a/src/main/resources/templates/account/login.html
+++ b/src/main/resources/templates/account/login.html
@@ -40,7 +40,6 @@
                                 <div class="l-f-o__pad-box">
                                     <h1 class="gl-h1">로그인</h1>
 
-                                    <span class="gl-text u-s-m-b-30">If you have an account with us, please log in.</span>
                                     <form class="l-f-o__form">
                                         <div id="login-email-div" class="u-s-m-b-30">
                                             <label class="gl-label" for="login-email">이메일</label>
@@ -67,25 +66,27 @@
                                             <!--카카오 로그인 -->
                                         <div id="social-login-div" class="gl-s-api">
                                             <div class="u-s-m-b-15">
-                                                <button class="gl-s-api__btn" type="button">
+                                                <button class="btn--icon" type="button">
                                                     <a href="https://kauth.kakao.com/oauth/authorize?response_type=code&client_id=578c006810acb509f2ccc52277d13ec9&redirect_uri=http://localhost:8081/api/kakao/login&prompt=select_account">
-                                                    <img src="/images/kakaologin/kakao_login_medium_wide.png">
+                                                    <img src="/images/kakaologin/kakao_signup_medium_wide.png" class="btn u-img-fluid">
                                                     </a>
                                                 </button>
                                             </div>
 
                                             <div class="u-s-m-b-15">
-                                                <button class="gl-s-api__btn gl-s-api__btn--fb" type="button">
-<!--                                                    <i src="" class="fab fa-facebook-f"></i>-->
-                                                    <span>페이스북 로그인</span></button>
+                                                <button class="btn--icon" type="button">
+                                                    <img src="/images/naver-login/naver_login_large.png" class="btn u-img-fluid">
+                                                </button>
                                             </div>
+
 
                                             <div class="u-s-m-b-15">
                                                 <button class="gl-s-api__btn gl-s-api__btn--gplus" type="button"><i
                                                         class="fab fa-google"></i>
-                                                    <span>네이버로 로그인</span></button>
+                                                    <span>구글 로그인</span></button>
                                             </div>
                                         </div>
+
                                     </form>
                                 </div>
                             </div>
