--- a/src/main/resources/templates/account/my-profile.html
+++ b/src/main/resources/templates/account/my-profile.html
@@ -139,7 +139,7 @@
                                                         <a data-modal="modal" data-modal-id="#dash-newsletter">Subscribe Newsletter</a></div>
                                                     <div class="u-s-m-b-16">
 
-                                                        <a class="dash__custom-link btn--e-transparent-brand-b-2" href="dash-edit-profile.html">Edit Profile</a></div>
+                                                        <a class="dash__custom-link btn--e-transparent-brand-b-2" href="/edit/profile">Edit Profile</a></div>
                                                     <div>
 
                                                         <a class="dash__custom-link btn--e-brand-b-2" href="#">Change Password</a></div>
@@ -177,7 +177,7 @@
 
                                 <span class="gl-modal-text">I have read and understood</span>
 
-                                <a class="d_modal__link" href="dash-my-profile.html">Ludus Privacy Policy</a>
+                                <a class="d_modal__link" href="my-profile.html">Ludus Privacy Policy</a>
                             </div>
                             <div class="gl-modal-btn-group">
 
