--- a/src/main/resources/templates/fragments/base/header.html
+++ b/src/main/resources/templates/fragments/base/header.html
@@ -772,10 +772,10 @@
                         <!--====== List ======-->
                         <ul class="ah-list ah-list--design2 ah-list--link-color-secondary">
                             <li>
-                                <a href="shop-side-version-2.html">기프티콘 등록</a></li>
+                                <a href="/gifticon/add">기프티콘 등록</a></li>
 
                             <li>
-                                <a href="shop-side-version-2.html">기프티콘 사용</a></li>
+                                <a href="#">기프티콘 사용</a></li>
 
                             <li>
                                 <a href="shop-side-version-2.html">기프티콘 선물</a></li>
