--- a/src/main/resources/templates/gifticon/add.html
+++ b/src/main/resources/templates/gifticon/add.html
@@ -27,8 +27,8 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="section__text-wrap">
-                                <h1 class="section__heading u-c-secondary">즐겨찾기</h1>
-                                <h3>이 페이지를 기프티콘 등록으로 사용할까 고려중</h3>
+                                <h1 class="section__heading u-c-secondary">기프티콘 등록</h1>
+                                <h3>등록 할 기프티콘을 올려주세요</h3>
                             </div>
                         </div>
                     </div>
@@ -42,7 +42,29 @@
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12">
 
-                            <!--====== Wishlist Product ======-->
+                            <div class="w-r u-s-m-b-30">
+                                <div class="w-r__container">
+                                    <div class="w-r__wrap-1">
+                                        <div class="w-r__img-wrap">
+                                            <img class="u-img-fluid" src="images/product/electronic/product3.jpg" alt=""></div>
+
+                                        <div class="w-r__info">
+                                            <span class="w-r__name">
+                                                <a>기프티콘을 추가해주세요</a>
+                                            </span>
+
+                                        </div>
+                                    </div>
+
+
+                                    <div class="w-r__wrap-2">
+<!--                                        <a class="w-r__link btn&#45;&#45;e-transparent-platinum-b-2" href="#">삭제</a>-->
+                                        <a class="w-r__link btn--e-brand-b-2" data-modal="modal" data-modal-id="#add-to-cart">추가</a>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!--====== Add Gifticon ======-->
                             <div class="w-r u-s-m-b-30">
                                 <div class="w-r__container">
                                     <div class="w-r__wrap-1">
@@ -51,81 +73,76 @@
                                             <img class="u-img-fluid" src="images/product/electronic/product3.jpg"
                                                  alt=""></div>
                                         <div class="w-r__info">
-                                            <span class="w-r__name">
-                                                <a href="product-detail.html">제품 이름</a>
-                                            </span>
 
-                                            <span class="w-r__category">
-                                                <a href="shop-side-version-2.html">브랜드</a>
-                                            </span>
+                                            <div class="gl-inline">
+                                                <span class="w-r__category"><a>브랜드</a></span>
+                                                <span class="u-s-m-x-10" style="color: red">!error</span>
+                                            </div>
 
-                                            <span class="w-r__price">할인된 가격
-                                                <span class="w-r__discount">제품 정가</span>
-                                            </span>
+                                            <div class="gl-inline">
+                                                <span class="w-r__name"><a>제품 이름</a></span>
+                                                <span class="u-s-m-x-10" style="color: red">!error</span>
+                                            </div>
+
+                                            <div class="gl-inline">
+                                                <span class="w-r__wrap-1">바코드 번호</span>
+                                                <span class="u-s-m-x-10" style="color: red">!error</span>
+                                            </div>
+
+                                            <div class="gl-inline">
+                                                <span class="w-r__price">기간</span>
+                                                <span class="u-s-m-x-10" style="color: red">!error</span>
+                                            </div>
+
+                                            <div class="gl-inline">
+                                                <span class="w-r__wrap-1">가격</span>
+                                                <span class="u-s-m-x-10" style="color: red">!error</span>
+                                            </div>
                                         </div>
                                     </div>
-                                    <div class="w-r__wrap-2">
-                                        <a class="w-r__link btn--e-brand-b-2" data-modal="modal" data-modal-id="#add-to-cart">장바구니에 담기</a>
-                                        <a class="w-r__link btn--e-transparent-platinum-b-2" href="product-detail.html">보기</a>
-                                        <a class="w-r__link btn--e-transparent-platinum-b-2" href="#">삭제</a></div>
-                                </div>
-                            </div>
-                            <!--====== End - Wishlist Product ======-->
 
-                            <!--====== Wishlist Product ======-->
-                            <div class="w-r u-s-m-b-30">
-                                <div class="w-r__container">
-                                    <div class="w-r__wrap-1">
-                                        <div class="w-r__img-wrap">
-                                            <img class="u-img-fluid" src="images/product/women/product8.jpg" alt="이미지가 없어용">
-                                        </div>
-                                        <div class="w-r__info">
-                                                <span class="w-r__name"><a href="product-detail.html">아이스 아메리카노</a></span>
-                                            <span class="w-r__category">
-                                                <a href="shop-side-version-2.html">스타벅스</a>
-                                            </span>
-                                            <span class="w-r__price">2500원
-                                                <span class="w-r__discount">3000원</span>
-                                            </span>
-                                        </div>
-                                    </div>
                                     <div class="w-r__wrap-2">
-                                        <a class="w-r__link btn--e-brand-b-2" data-modal="modal" data-modal-id="#add-to-cart">장바구니에 담기</a>
-                                        <a class="w-r__link btn--e-transparent-platinum-b-2" href="product-detail.html">보기</a>
+                                        <a class="w-r__link btn--e-transparent-platinum-b-2" href="#">상세 보기</a>
                                         <a class="w-r__link btn--e-transparent-platinum-b-2" href="#">삭제</a>
+                                        <a class="w-r__link btn--e-brand-b-2" data-modal="modal" data-modal-id="#add-to-cart">등록</a>
                                     </div>
+
                                 </div>
                             </div>
-                            <!--====== End - Wishlist Product ======-->
+                            <!--====== End - Add Gifticon ======-->
 
-                            <!--====== Wishlist Product ======-->
                             <div class="w-r u-s-m-b-30">
                                 <div class="w-r__container">
                                     <div class="w-r__wrap-1">
                                         <div class="w-r__img-wrap">
-                                            <img class="u-img-fluid" src="images/product/men/product8.jpg" alt="이미지가 없어용"></div>
+
+                                            <img class="u-img-fluid" src="images/product/electronic/product3.jpg"
+                                                 alt=""></div>
                                         <div class="w-r__info">
-                                            <span class="w-r__name">
-                                                <a href="product-detail.html">New Fashion D Nice Elegant</a>
-                                            </span>
-
                                             <span class="w-r__category">
-                                                    <a href="shop-side-version-2.html">Men Clothing</a>
+                                                <a>메가 커피</a>
                                             </span>
 
-                                            <span class="w-r__price">$125.00
-                                                <span class="w-r__discount">$160.00</span>
+                                            <span class="w-r__name">
+                                                <a>아이스 아메리카노</a>
                                             </span>
+
+                                            <span class="w-r__price">~2023-11-30</span>
+
+                                            <span class="w-r__price">
+                                                <h2>2500원</h2>
+                                            </span>
+
+
                                         </div>
                                     </div>
-
                                     <div class="w-r__wrap-2">
                                         <a class="w-r__link btn--e-brand-b-2" data-modal="modal" data-modal-id="#add-to-cart">장바구니에 담기</a>
                                         <a class="w-r__link btn--e-transparent-platinum-b-2" href="product-detail.html">보기</a>
                                         <a class="w-r__link btn--e-transparent-platinum-b-2" href="#">삭제</a></div>
                                 </div>
                             </div>
-                            <!--====== End - Wishlist Product ======-->
+
                         </div>
                         <div class="col-lg-12">
                             <div class="route-box">
@@ -168,32 +185,32 @@
                             <div class="success u-s-m-b-30">
                                 <div class="success__text-wrap"><i class="fas fa-check"></i>
 
-                                    <span>Item is added successfully!</span></div>
+                                    <span>기프티콘 올리기</span></div>
                                 <div class="success__img-wrap">
 
                                     <img class="u-img-fluid" src="images/product/electronic/product1.jpg" alt=""></div>
                                 <div class="success__info-wrap">
-
-                                    <span class="success__name">Beats Bomb Wireless Headphone</span>
-
-                                    <span class="success__quantity">Quantity: 1</span>
-
-                                    <span class="success__price">$170.00</span></div>
+                                    <span class="success__name">기프티콘 이름</span>
+                                    <span class="success__quantity"></span>
+                                    <span class="success__price">사용기한</span></div>
                             </div>
                         </div>
                         <div class="col-lg-6 col-md-12">
                             <div class="s-option">
 
-                                <span class="s-option__text">1 item (s) in your cart</span>
+                                <span class="s-option__text">추가 방법을 선택해주세요</span>
                                 <div class="s-option__link-box">
 
-                                    <a class="s-option__link btn--e-white-brand-shadow" data-dismiss="modal">CONTINUE
-                                        SHOPPING</a>
+                                    <a class="s-option__link btn--e-white-brand-shadow" data-dismiss="modal">
+                                        카카오톡으로 추가하기</a>
 
-                                    <a class="s-option__link btn--e-white-brand-shadow" href="cart.html">VIEW CART</a>
+                                    <a class="s-option__link btn--e-white-brand-shadow" href="cart.html">
+                                        문자로 추가하기
+                                    </a>
 
-                                    <a class="s-option__link btn--e-brand-shadow" href="payment/checkout.html">PROCEED TO
-                                        CHECKOUT</a></div>
+                                    <a class="s-option__link btn--e-brand-shadow" href="payment/checkout.html">
+                                        등록 완료</a>
+                                </div>
                             </div>
                         </div>
                     </div>
