--- a/src/main/resources/static/css/app.color7.css
+++ b/src/main/resources/static/css/app.color7.css
@@ -459,6 +459,8 @@ body {
     background-color: #dd4b39; }
     .gl-s-api__btn--gplus:hover {
       background-color: #d73925; }
+  .gl-s-api__btn--ka {
+    background-color: #FFE500; }
 
 /*
  * Inline Maker 1
