Feat: 장바구니 기능 추가

--- a/src/main/resources/templates/payment/checkout.html
+++ b/src/main/resources/templates/payment/checkout.html
@@ -436,7 +436,7 @@
     <script th:src="@{/payment.js}"></script>
     <script th:inline="javascript">
         loadItem([[${param.gifticonIds}]]);
-        payWithPointEvent(10000, "itemTest");
+        payWithPointEvent(parseInt($("tr#final-price").text()), $(""));
     </script>
 </body>
 </html>
