--- a/src/main/resources/templates/fragments/base/script.html
+++ b/src/main/resources/templates/fragments/base/script.html
@@ -24,6 +24,9 @@
     <!--====== App ======-->
     <script src="/js/app.js"></script>
 
+    <!--====== Custom ======-->
+    <script src="/mini-cart.js"></script>
+
 
     <!--====== Noscript ======-->
     <noscript>
