--- a/src/main/resources/templates/account/my-profile.html
+++ b/src/main/resources/templates/account/my-profile.html
@@ -43,7 +43,7 @@
                                                 <li>
                                                     <a href="/wishlist">내 즐겨찾기</a></li>
                                                 <li>
-                                                    <a href="#">결제 내역</a></li>
+                                                    <a href="/payment/orders">결제 내역</a></li>
                                                 <li>
                                                     <a href="#">구매 내역</a></li>
                                                 <li>
