Fix: 포인트 결제 금액이 20000으로 고정되던 현상 수정

--- a/src/main/resources/templates/payment/checkout.html
+++ b/src/main/resources/templates/payment/checkout.html
@@ -435,8 +435,9 @@
     <th:block th:replace="fragments/base/script :: script"></th:block>
     <script th:src="@{/payment.js}"></script>
     <script th:inline="javascript">
-        loadItem([[${param.gifticonIds}]]);
-        payWithPointEvent(parseInt($("tr#final-price").text()), $(""));
+        window.onload = () => {
+            loadItem([[${param.gifticonIds}]]);
+        }
     </script>
 </body>
 </html>
