Design: 포인트 충전 아이콘 수정

--- a/src/main/resources/templates/fragments/base/head.html
+++ b/src/main/resources/templates/fragments/base/head.html
@@ -8,6 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link href="images/favicon.png" rel="shortcut icon">
+    <link rel="stylesheet" href="/css/header/responsable-hidden.css">
     <title>Gifthub</title>
 
     <!--====== Google Font ======-->
