--- a/src/main/resources/templates/fragments/base/script.html
+++ b/src/main/resources/templates/fragments/base/script.html
@@ -24,6 +24,9 @@
     <!--====== App ======-->
     <script src="/js/app.js"></script>
 
+    <!--====== FontAwesome ======-->
+    <script src="https://kit.fontawesome.com/6bcdc51097.js" crossorigin="anonymous"></script>
+
     <!--====== Custom ======-->
     <script src="/mini-cart.js"></script>
 
